--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 bg: "rails.jpg"
 layout: default
-crawlertitle: "Jekyll blog"
-title: "Voyager"
+crawlertitle: "Liu-Cheng Xu's blog"
+title: "Liu-Cheng Xu"
 summary: "Life is a long road"
 ---
 
