--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Liu Cheng-Xu's Homepage">
     <meta name="author" content="Liu Cheng-Xu">
 
+    <link rel="shortcut icon" href="assets/images/x.gif" type="image/x-icon"/>
+
     <title>Liu Cheng-Xu's Homepage</title>
 
     <!-- Bootstrap core CSS -->
@@ -68,6 +70,12 @@
                 <a href="https://github.com/liuchengxu" class="btn btn-default btn-lg">
                   <i class="fa fa-github fa-fw"></i>
                   <span class="network-name">Github</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="mailto:xuliuchengxlc@gmail.com" class="btn btn-default btn-lg">
+                  <i class="fa fa-envelope fa-fw"></i>
+                  <span class="network-name">Email</span>
                 </a>
               </li>
             </ul>
